--- a/INSTANTIATOR/INSTANTIATOR/INSTANTIATOR/INSTANTIATOR.csproj
+++ b/INSTANTIATOR/INSTANTIATOR/INSTANTIATOR/INSTANTIATOR.csproj
@@ -35,6 +35,9 @@
       <HintPath>..\..\..\..\..\..\Desktop\Historical Progression\Kerbal Space Program\KSP_x64_Data\Managed\Assembly-CSharp.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="Assembly-UnityScript">
+      <HintPath>..\..\..\..\..\..\Desktop\Historical Progression\Kerbal Space Program\KSP_x64_Data\Managed\Assembly-UnityScript.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -46,6 +49,9 @@
     <Reference Include="UnityEngine">
       <HintPath>..\..\..\..\..\..\Desktop\Historical Progression\Kerbal Space Program\KSP_x64_Data\Managed\UnityEngine.dll</HintPath>
       <Private>False</Private>
+    </Reference>
+    <Reference Include="UnityEngine.Networking">
+      <HintPath>..\..\..\..\..\..\Desktop\Historical Progression\Kerbal Space Program\KSP_x64_Data\Managed\UnityEngine.Networking.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
