--- a/INSTANTIATOR/INSTANTIATOR/INSTANTIATOR/INSTANTIATOR.csproj
+++ b/INSTANTIATOR/INSTANTIATOR/INSTANTIATOR/INSTANTIATOR.csproj
@@ -31,7 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Assembly-CSharp">
-      <HintPath>..\..\Kerbal Space Program_1.3\KSP_Data\Managed\Assembly-CSharp.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\Desktop\KSP stuff\Historical Progression\KSP_x64_Data\Managed\Assembly-CSharp.dll</HintPath>
     </Reference>
     <Reference Include="Assembly-CSharp-firstpass">
       <HintPath>..\..\Kerbal Space Program_1.3\KSP_Data\Managed\Assembly-CSharp-firstpass.dll</HintPath>
@@ -51,7 +51,7 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="UnityEngine">
-      <HintPath>..\..\Kerbal Space Program_1.3\KSP_Data\Managed\UnityEngine.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\Desktop\KSP stuff\Historical Progression\KSP_x64_Data\Managed\UnityEngine.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
